--- a/product.html
+++ b/product.html
@@ -11,7 +11,17 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 <body>
-<h1 hidden="true">Products</h1>
+  <!-- nav to test -->
+  <div class="totest">
+    <div class="wrap totest-wrap">     
+      <a class="totest-link" href="./index.html">index</a>
+      <a class="totest-link" href="./product.html">product</a>
+      <a class="totest-link" href="./catalog.html">catalog</a>
+      <a class="totest-link" href="./registration.html">registration</a>
+      <a class="totest-link" href="./cart.html">cart</a>
+    </div>
+  </div>
+  <!-- nav to test -->
  <!-- HEADER Start-->
   <!-- -->
   <header class="header">
