--- a/catalog.html
+++ b/catalog.html
@@ -258,7 +258,7 @@
       <h2 class="hidden">Products</h2>
       <div class="products-cont">
         
-        <div class="products-catalog-card">
+        <article class="products-catalog-card">
           <div class="products-overlay">
             <button class="btn-add">
               <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -271,9 +271,9 @@
               <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="products-card-price">$52.00</p>
             </div>
-        </div>
+        </article>
 
-        <div class="products-catalog-card">
+        <article class="products-catalog-card">
           <div class="products-overlay">
             <button class="btn-add">
               <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -286,9 +286,9 @@
               <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="products-card-price">$52.00</p>
             </div>
-        </div>
+        </article>
 
-        <div class="products-catalog-card">
+        <article class="products-catalog-card">
           <div class="products-overlay">
             <button class="btn-add">
               <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -301,9 +301,9 @@
               <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="products-card-price">$52.00</p>
             </div>
-        </div>
+        </article>
 
-        <div class="products-catalog-card">
+        <article class="products-catalog-card">
           <div class="products-overlay">
             <button class="btn-add">
               <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -316,9 +316,9 @@
               <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="products-card-price">$52.00</p>
             </div>
-        </div>
+        </article>
 
-        <div class="products-catalog-card">
+        <article class="products-catalog-card">
           <div class="products-overlay">
             <button class="btn-add">
               <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -331,9 +331,9 @@
               <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="products-card-price">$52.00</p>
             </div>
-        </div>
+        </article>
 
-        <div class="products-catalog-card">
+        <article class="products-catalog-card">
           <div class="products-overlay">
             <button class="btn-add">
               <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -346,9 +346,9 @@
               <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="products-card-price">$52.00</p>
             </div>
-        </div>
+        </article>
 
-        <div class="products-catalog-card">
+        <article class="products-catalog-card">
           <div class="products-overlay">
             <button class="btn-add">
               <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -361,9 +361,9 @@
                 <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                 <p class="products-card-price">$52.00</p>
               </div>
-        </div>
+        </article>
 
-        <div class="products-catalog-card">
+        <article class="products-catalog-card">
           <div class="products-overlay">
             <button class="btn-add">
               <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -376,9 +376,9 @@
                 <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                 <p class="products-card-price">$52.00</p>
               </div>
-        </div>
+        </article>
 
-        <div class="products-catalog-card">
+        <article class="products-catalog-card">
           <div class="products-overlay">
             <button class="btn-add">
               <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -391,7 +391,7 @@
                 <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                 <p class="products-card-price">$52.00</p>
               </div>
-        </div>
+        </article>
 
       </div>
 
