--- a/product.html
+++ b/product.html
@@ -253,7 +253,7 @@
 
     <div class="products-cont">
       
-      <div class="products-catalog-card">
+      <article class="products-catalog-card">
         <div class="products-overlay">
           <button class="btn-add">
             <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -266,9 +266,9 @@
             <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
             <p class="products-card-price">$52.00</p>
           </div>
-      </div>
+      </article>
 
-      <div class="products-catalog-card">
+      <article class="products-catalog-card">
         <div class="products-overlay">
           <button class="btn-add">
             <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -281,9 +281,9 @@
             <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
             <p class="products-card-price">$52.00</p>
           </div>
-      </div>
+      </article>
 
-      <div class="products-catalog-card">
+      <article class="products-catalog-card">
         <div class="products-overlay">
           <button class="btn-add">
             <img class="btn-add-img" src="./img/cart.svg" alt="">
@@ -296,7 +296,7 @@
             <p class="products-card-desc">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
             <p class="products-card-price">$52.00</p>
           </div>
-      </div>
+      </article>
 
 
 
