--- a/test.html
+++ b/test.html
@@ -19,5 +19,16 @@
     <a class="btn-1" href="#">123</a>
 </div>
 
+<div class="wrap testwrap">
+  <input type="checkbox" id="hello">
+  <label for="hello"><img src="./img/logo.png" alt=""></label>
+  <label for="hello"><img src="./img/logo.png" alt=""></label>
+  <div class="test1"></div>
+</div>
+
+<div class="wrap testwrap">
+<div class="test1"></div>
+</div>
+
 </body>
 </html>
