--- a/catalog.html
+++ b/catalog.html
@@ -208,25 +208,25 @@
           <ul class="drop filter-list filter-drop-check">
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox">
+                <input class="checkbox2 filter-drop-inp" type="checkbox">
                 <span class="filter-drop-sp">LoremawgawgawLoremawgawgawLoremawgawgaw</span>
               </label>
             </li>
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox">
+                <input class="checkbox2 filter-drop-inp" type="checkbox">
                 <span class="filter-drop-sp">Lorem ipsum dolor sit amet.</span>
               </label>
             </li>
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox">
+                <input class="checkbox2 filter-drop-inp" type="checkbox">
                 <span class="filter-drop-sp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ducimus est, ex molestias repudiandae commodi.</span>
               </label>
             </li>
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox">
+                <input class="checkbox2 filter-drop-inp" type="checkbox">
                 <span class="filter-drop-sp">Lorem ipsum dolor sit amet.</span>
               </label>
             </li>
@@ -242,22 +242,22 @@
           <ul class="drop filter-list filter-drop-check">
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">XSXSXSXSXSXSXSXSXSXSXSXSXSXSXS</span>
+                <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">XSXSXSXSXSXSXSXSXSXSXSXSXSXSXS</span>
               </label>
             </li>
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">S</span>
+                <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">S</span>
               </label>
             </li>
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">M</span>
+                <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">M</span>
               </label>
             </li>
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">L</span>
+                <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">L</span>
               </label>
             </li>
           </ul>
@@ -272,22 +272,22 @@
           <ul class="drop filter-list filter-drop-check filter-drop-last">
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">JGAGHALGAGJGAGHALGAGJGAGHALGAGJGAGHALGAGJGAGHALGAG</span>
+                <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">JGAGHALGAGJGAGHALGAGJGAGHALGAGJGAGHALGAGJGAGHALGAG</span>
               </label>
             </li>
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">lrhgdhgdgrdg</span>
+                <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">lrhgdhgdgrdg</span>
               </label>
             </li>
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">236236</span>
+                <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">236236</span>
               </label>
             </li>
             <li>
               <label class="filter-drop-label">
-                <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">kjegkjsefj fehfsefsef fesfsefsefse</span>
+                <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">kjegkjsefj fehfsefsef fesfsefsefse</span>
               </label>
             </li>
           </ul>
