--- a/product.html
+++ b/product.html
@@ -185,25 +185,25 @@
         <ul class="drop filter-list filter-drop-check">
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox">
+              <input class="checkbox2 filter-drop-inp" type="checkbox">
               <span class="filter-drop-sp">RedRedRedRedRedRedRedRedRedRedRed</span>
             </label>
           </li>
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox">
+              <input class="checkbox2 filter-drop-inp" type="checkbox">
               <span class="filter-drop-sp">White</span>
             </label>
           </li>
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox">
+              <input class="checkbox2 filter-drop-inp" type="checkbox">
               <span class="filter-drop-sp">Pink</span>
             </label>
           </li>
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox">
+              <input class="checkbox2 filter-drop-inp" type="checkbox">
               <span class="filter-drop-sp">Purpure</span>
             </label>
           </li>
@@ -219,22 +219,22 @@
         <ul class="drop filter-list filter-drop-check">
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">XSXSXSXSXSXSXSXSXSXSXSXSXSXSXSXSXSXS</span>
+              <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">XSXSXSXSXSXSXSXSXSXSXSXSXSXSXSXSXSXS</span>
             </label>
           </li>
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">S</span>
+              <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">S</span>
             </label>
           </li>
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">M</span>
+              <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">M</span>
             </label>
           </li>
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">L</span>
+              <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">L</span>
             </label>
           </li>
         </ul>
@@ -249,22 +249,22 @@
         <ul class="drop filter-list filter-drop-check filter-drop-last product-filter-drop-corr">
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">PoorPoorPoorPoorPoorPoorPoorPoorPoorPoorPoorPoorPoor</span>
+              <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">PoorPoorPoorPoorPoorPoorPoorPoorPoorPoorPoorPoorPoor</span>
             </label>
           </li>
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">Good</span>
+              <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">Good</span>
             </label>
           </li>
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">Rare</span>
+              <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">Rare</span>
             </label>
           </li>
           <li>
             <label class="filter-drop-label">
-              <input class="filter-drop-inp" type="checkbox"><span class="filter-drop-sp">Epic</span>
+              <input class="checkbox2 filter-drop-inp" type="checkbox"><span class="filter-drop-sp">Epic</span>
             </label>
           </li>
         </ul>
