--- a/cart.html
+++ b/cart.html
@@ -129,7 +129,7 @@
     <div class="wrap cart-wrap">
 
       <div class="cart-products">
-
+        <h2 class="hidden">Cart Products</h2>
         <div class="cart-products-card">
             <img class="cart-products-card-img" src="img/product-img-3.jpg" alt="">
 
@@ -153,7 +153,7 @@
         </div>
 
         <div class="cart-products-card">
-            <img class="cart-products-card-img" src="img/product-img-3.jpg" alt="">
+            <img class="cart-products-card-img" src="img/product-img-7.jpg" alt="">
 
             <div class="cart-products-card-description">
                 <h3 class="cart-products-card-description-heading">MANGO  PEOPLE<br> T-SHIRT</h3>
